Clarify rules in subtitle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <main class="page">
     <header>
       <h1>Pushmine</h1>
-      <p class="subtitle">Local play vs AI with mines, pushes, and 4-in-a-row tactics.</p>
+      <p class="subtitle">Push from any edge to slide a row/column and place your stone; make 4 in a row to win. Ejecting an opponent stone earns a mine, which you can place on an empty cell to destroy the next pushed-in stone.</p>
     </header>
 
     <section class="controls">
