Add persistent moves log

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       <div id="board" class="board" aria-label="Pushmine board"></div>
     </section>
 
+    <section class="log-panel">
+      <h2>Moves Log</h2>
+      <div id="moveLog" class="log-entries" aria-live="polite"></div>
+    </section>
+
     <section class="metrics">
       <h2>Gameplay Metrics</h2>
       <div class="metric-grid">
