--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 
     <section class="controls">
       <div class="control">
+        <label for="gameMode">Game Mode</label>
+        <select id="gameMode">
+          <option value="ai">Player vs AI</option>
+          <option value="local">Local Multiplayer</option>
+        </select>
+      </div>
+      <div class="control">
         <label for="difficulty">AI Difficulty</label>
         <select id="difficulty">
           <option value="easy">Easy</option>
